syntax = "proto3";
package bx2cloud;

option go_package = "github.com/BenasB/bx2cloud/internal/api/pb";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service SubnetworkService {
    rpc Get (SubnetworkIdentificationRequest) returns (Subnetwork);
    rpc List (google.protobuf.Empty) returns (stream Subnetwork);
    rpc Create (SubnetworkCreationRequest) returns (Subnetwork);
    rpc Update (SubnetworkUpdateRequest) returns (Subnetwork);
    rpc Delete (SubnetworkIdentificationRequest) returns (google.protobuf.Empty);
}

message SubnetworkIdentificationRequest {
    uint32 id = 1;
}

message SubnetworkCreationRequest {
    uint32 network_id = 1;
    fixed32 address = 2;
    fixed32 prefix_length = 3;
}

message SubnetworkUpdateRequest {
    SubnetworkIdentificationRequest identification = 1;
    // TODO: different message for update body, disallow passing different networkId
    SubnetworkCreationRequest update = 2;
}

message Subnetwork {
    uint32 id = 1;
    uint32 network_id = 2;
    fixed32 address = 3;
    fixed32 prefix_length = 4;
    google.protobuf.Timestamp createdAt = 5;
}